--- a/deployment-service.yml
+++ b/deployment-service.yml
@@ -1,23 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment # Kubernetes resource kind we are creating
 metadata:
-  name: ekart-deployment
+  name: counter-deployment
 spec:
   selector:
     matchLabels:
-      app: ekart
+      app: counter
   replicas: 2 # Number of replicas that will be created for this deployment
   template:
     metadata:
       labels:
-        app: ekart
+        app: counter
     spec:
       containers:
-        - name: ekart
-          image: rameshkumarverma/ekart:latest # Image that will be used to containers in the cluster
+        - name: counter
+          image: rameshkumarverma/counter-app:latest # Image that will be used to containers in the cluster
           imagePullPolicy: IfNotPresent
           ports:
-            - containerPort: 8070 # The port that the container is running on in the cluster
+            - containerPort: 9099 # The port that the container is running on in the cluster
 
 
 ---
@@ -25,12 +25,12 @@ spec:
 apiVersion: v1 # Kubernetes API version
 kind: Service # Kubernetes resource kind we are creating
 metadata: # Metadata of the resource kind we are creating
-  name: ekart-ssvc
+  name: counter-ssvc
 spec:
   selector:
-    app: ekart
+    app: counter
   ports:
     - protocol: "TCP"
-      port: 8070 # The port that the service is running on in the cluster
-      targetPort: 8070 # The port exposed by the service
+      port: 9099 # The port that the service is running on in the cluster
+      targetPort: 9099 # The port exposed by the service
   type: NodePort # type of the service.
